# matcha

./: README.md  docker-compose.yaml
backend/: .gitignore  Cargo.toml  Dockerfile
backend/migrations/2024-08-17-135904_create_user/: down.sql  up.sql
backend/src/: data_types.rs  lib.rs  main.rs  schema.rs  urls.rs
backend/src/data_types/: User.rs
backend/src/models/: user.rs
db/: Dockerfile
frontend/: Dockerfile  package-lock.json
frontend/src/: main.ts
frontend/src/app/: app.component.css  app.component.html  app.component.ts  housing.service.ts
frontend/src/app/home/: home.component.css  home.component.html  home.component.ts
frontend/src/app/housing-location/: housing-location.component.css  housing-location.component.html  housing-location.component.ts
